update favicon to new design and adjust icon link in HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		Imran Ahmed
 	</title>
 	<link rel="icon"
-		href="https://github.com/imran-ahmed377/imranahmed/blob/master/page%20graphics/fevicon_new.png?raw=true"
+		href="https://github.com/imran-ahmed377/imranahmed/blob/master/page%20graphics/favicon-96x96.png?raw=true"
 		type="image/x-icon">
 	<link
 		href="https://raw.githubusercontent.com/imran-ahmed377/imranahmed/refs/heads/master/two%20css%20file/all.min.css"
