--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 	<link rel="icon"
 		href="https://github.com/imran-ahmed377/imranahmed/blob/master/page%20graphics/favicon-96x96.png?raw=true"
 		type="image/x-icon">
-	<link
-		href="https://raw.githubusercontent.com/imran-ahmed377/imranahmed/refs/heads/master/two%20css%20file/all.min.css"
-		rel="stylesheet" />
-	<link href="https://raw.githubusercontent.com/imran-ahmed377/imranahmed/refs/heads/master/two%20css%20file/css2.css"
-		rel="stylesheet" />
+	<link href="styles.css" rel="stylesheet" />
 	<style>
+		/* ===== CRITICAL CSS (Above-the-fold) ===== */
 		body {
 			margin: 0;
 			font-family: 'Roboto', sans-serif;
@@ -135,443 +132,9 @@
 		nav a:hover::before {
 			width: 100%;
 		}
-
-		.portfolio,
-		.academics_n_career,
-		.services,
-		.course_n_cert,
-		.contact {
-			padding: 50px 20px;
-			text-align: center;
-		}
-
-		.portfolio h2,
-		.academics_n_career h2,
-		.services h2,
-		.course_n_cert h2,
-		.contact h2 {
-			font-size: 2em;
-			margin-bottom: 20px;
-		}
-
-		.portfolio .categories,
-		.portfolio .items,
-		.academics_n_career .content,
-		.services .content,
-		.course_n_cert .content,
-		.contact .content {
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-		}
-
-		.portfolio .categories a,
-		.services .content .service,
-		.course_n_cert .content .post,
-		.contact .content .form,
-		.contact .content .details {
-			background-color: #444444;
-			margin: 10px;
-			padding: 20px;
-			border-radius: 5px;
-			flex: 1 1 300px;
-			max-width: 300px;
-			text-align: left;
-		}
-
-		.portfolio .items .item,
-		.academics_n_career .content .section,
-		.services .content .service,
-		.course_n_cert .content .post {
-			background-color: #444;
-			margin: 10px;
-			padding: 20px;
-			border-radius: 5px;
-			flex: 1 1 300px;
-			max-width: 300px;
-		}
-
-		.portfolio .items .item img,
-		.course_n_cert .content .post img {
-			width: 100%;
-			border-radius: 5px;
-		}
-
-		.portfolio .items .item h3,
-		.academics_n_career .content .section h3,
-		.services .content .service h3,
-		.course_n_cert .content .post h3 {
-			font-size: 1.5em;
-			margin: 10px 0;
-		}
-
-		.portfolio .items .item p,
-		.academics_n_career .content .section p,
-		.services .content .service p,
-		.course_n_cert .content .post p {
-			font-size: 1em;
-			color: #aaa;
-		}
-
-		.project-date {
-			font-size: 0.85em;
-			color: #a8c66c;
-			margin: 5px 0 10px 0;
-			font-weight: 700;
-		}
-
-		.skills-container {
-			text-align: center;
-		}
-
-		.skills-title {
-			font-size: 24px;
-			font-weight: bold;
-			margin-bottom: 20px;
-		}
-
-		.skills-grid {
-			display: grid;
-			grid-template-columns: repeat(6, 1fr);
-			gap: 10px;
-		}
-
-		.skill-item img {
-			width: 100px;
-			height: 100px;
-			border-radius: 50%;
-		}
-
-		@media (max-width: 768px) {
-			.skills-grid {
-				grid-template-columns: repeat(3, 1fr);
-			}
-		}
-
-		@media (max-width: 480px) {
-			.skills-grid {
-				grid-template-columns: repeat(2, 1fr);
-			}
-		}
-
-		.about-section {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			margin: 50px 0;
-		}
-
-		.about-section img {
-			width: 300px;
-			height: 300px;
-			border-radius: 50%;
-			object-fit: cover;
-			margin-right: 50px;
-		}
-
-		.about-section .about-text {
-			max-width: 500px;
-		}
-
-		.about-section .about-text h2 {
-			font-size: 36px;
-			font-weight: 400;
-		}
-
-		.about-section .about-text h2 span {
-			font-weight: 700;
-		}
-
-		.about-section .about-text p {
-			font-size: 14px;
-			margin: 10px 0;
-		}
-
-		.about-section .about-text .buttons {
-			margin-top: 20px;
-		}
-
-		.about-section .about-text .buttons a {
-			text-decoration: none;
-			color: #fff;
-			background-color: #a8c66c;
-			padding: 10px 20px;
-			border-radius: 5px;
-			margin-right: 10px;
-		}
-
-		.about-section .about-text .buttons a:hover {
-			background-color: #fff;
-			color: #000;
-		}
-
-		.contact .content .form input,
-		.contact .content .form textarea {
-			width: 100%;
-			padding: 10px;
-			margin: 10px 0;
-			border: none;
-			border-radius: 5px;
-		}
-
-		.contact .content .form button {
-			padding: 10px 20px;
-			border: none;
-			border-radius: 5px;
-			background-color: #555;
-			color: #fff;
-			cursor: pointer;
-		}
-
-		footer {
-			text-align: center;
-			padding: 20px 0;
-			background-color: #333;
-		}
-
-		footer p {
-			margin: 10px 0;
-			color: #aaa;
-		}
-
-		footer .social a {
-			color: #fff;
-			margin: 0 10px;
-			text-decoration: none;
-			font-size: 1.5em;
-		}
-
-		a.learn-more-button {
-			display: inline-block;
-			padding: 10px 20px;
-			font-size: 16px;
-			color: white;
-			background-color: #a8c66c;
-			border: none;
-			border-radius: 5px;
-			text-decoration: none;
-			text-align: center;
-			transition: all 0.3s ease;
-		}
-
-		a.learn-more-button:hover {
-			background-color: #fff;
-			color: #000;
-			transform: translateY(-2px);
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-		}
-
-		/* ===== PROFESSIONAL EXPERIENCE SECTION ===== */
-		.experience-detailed {
-			padding: 50px 20px;
-			text-align: center;
-			background-color: #1c1c1c;
-		}
-
-		.experience-detailed h2 {
-			font-size: 2em;
-			margin-bottom: 40px;
-			color: #fff;
-		}
-
-		.experience-container {
-			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-			gap: 25px;
-			max-width: 1400px;
-			margin: 0 auto;
-		}
-
-		.experience-card {
-			background-color: #444;
-			padding: 25px;
-			border-radius: 8px;
-			text-align: left;
-			border-top: 4px solid #a8c66c;
-			transition: transform 0.3s ease, box-shadow 0.3s ease;
-		}
-
-		.experience-card:hover {
-			transform: translateY(-5px);
-			box-shadow: 0 8px 16px rgba(168, 198, 108, 0.2);
-		}
-
-		.job-title {
-			font-size: 1.3em;
-			color: #a8c66c;
-			margin: 0 0 8px 0;
-			font-weight: 600;
-		}
-
-		.job-duration {
-			font-size: 0.9em;
-			color: #888;
-			margin: 0 0 5px 0;
-			font-weight: 500;
-		}
-
-		.job-company {
-			font-size: 0.95em;
-			color: #aaa;
-			margin: 0 0 15px 0;
-		}
-
-		.job-responsibilities {
-			list-style: none;
-			padding: 0;
-			margin: 0;
-		}
-
-		.job-responsibilities li {
-			font-size: 0.9em;
-			color: #bbb;
-			margin: 8px 0 8px 20px;
-			line-height: 1.6;
-			position: relative;
-		}
-
-		.job-responsibilities li:before {
-			content: "▸";
-			position: absolute;
-			left: -15px;
-			color: #a8c66c;
-			font-weight: bold;
-		}
-
-		@media (max-width: 768px) {
-			.experience-container {
-				grid-template-columns: 1fr;
-			}
-		}
-
-		/* ===== END PROFESSIONAL EXPERIENCE SECTION ===== */
-
-		/* ===== TESTIMONIALS SECTION ===== */
-		.testimonials-section {
-			padding: 40px 20px;
-			background-color: #1c1c1c;
-		}
-
-		.testimonials-section h2 {
-			text-align: center;
-			color: #fff;
-			margin-bottom: 40px;
-			font-size: clamp(1.5em, 5vw, 2.5em);
-		}
-
-		.testimonials-container {
-			display: grid;
-			grid-template-columns: auto-fit minmax(350px, 1fr);
-			gap: 30px;
-			max-width: 1200px;
-			margin: 0 auto;
-		}
-
-		.testimonial-card {
-			background-color: #444;
-			padding: 25px;
-			border-left: 4px solid #a8c66c;
-			border-radius: 5px;
-			transition: all 0.3s ease;
-			display: flex;
-			flex-direction: column;
-		}
-
-		.testimonial-card:hover {
-			transform: translateY(-5px);
-			box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-		}
-
-		.testimonial-text {
-			color: #fff;
-			font-style: italic;
-			margin-bottom: 15px;
-			line-height: 1.6;
-		}
-
-		.testimonial-author {
-			color: #a8c66c;
-			font-weight: 700;
-			margin-top: auto;
-		}
-
-		.testimonial-role {
-			color: #ccc;
-			font-size: 0.9em;
-		}
-
-		@media (max-width: 768px) {
-			.testimonials-container {
-				grid-template-columns: 1fr;
-			}
-		}
-
-		/* ===== END TESTIMONIALS SECTION ===== */
-
-		/* ===== ACADEMICS SECTION ===== */
-		.academics-section {
-			padding: 50px 20px;
-			text-align: center;
-			background-color: #1c1c1c;
-		}
-
-		.academics-section h2 {
-			font-size: 2em;
-			margin-bottom: 40px;
-			color: #fff;
-		}
-
-		.academics-container {
-			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-			gap: 25px;
-			max-width: 1400px;
-			margin: 0 auto;
-		}
-
-		.education-card {
-			background-color: #444;
-			padding: 30px 25px;
-			border-radius: 8px;
-			text-align: center;
-			border-top: 4px solid #a8c66c;
-			transition: transform 0.3s ease, box-shadow 0.3s ease;
-		}
-
-		.education-card:hover {
-			transform: translateY(-5px);
-			box-shadow: 0 8px 16px rgba(168, 198, 108, 0.2);
-		}
-
-		.degree-title {
-			font-size: 1.3em;
-			color: #a8c66c;
-			margin: 0 0 12px 0;
-			font-weight: 600;
-			line-height: 1.5;
-		}
-
-		.study-duration {
-			font-size: 0.9em;
-			color: #888;
-			margin: 0 0 8px 0;
-			font-weight: 500;
-		}
-
-		.university-name {
-			font-size: 0.95em;
-			color: #bbb;
-			margin: 0;
-		}
-
-		@media (max-width: 768px) {
-			.academics-container {
-				grid-template-columns: 1fr;
-			}
-		}
-
-		/* ===== END ACADEMICS SECTION ===== */
 	</style>
+	</style>
+</head>
 </head>
 
 <body>
@@ -1848,30 +1411,30 @@
 			© <span id="year"></span>. All rights reserved.
 		</p>
 		<div class="social">
-			<!-- <a href="#">
-				<i class="fab fa-facebook-f">
-				</i>
-			</a> -->
-			<!-- <a href="#">
-				<i class="fab fa-twitter">
-				</i>
-			</a> -->
-			<a href="https://www.linkedin.com/in/imran-ahmed-mac-uwindsor/">
-				<i class="fab fa-linkedin-in">
-				</i>
+			<a href="https://www.linkedin.com/in/imran-ahmed-mac-uwindsor/" title="LinkedIn">
+				<svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+					<path
+						d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+				</svg>
 			</a>
-			<!-- <a href="#">
-				<i class="fab fa-instagram">
-				</i>
-			</a> -->
-			<a href="https://github.com/imran-ahmed377">
-				<i class="fab fa-github">
-				</i>
+			<a href="https://github.com/imran-ahmed377" title="GitHub">
+				<svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+					<path
+						d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.6.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v 3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+				</svg>
 			</a>
 		</div>
 	</footer>
 	<script>
+		// Set current year
 		document.getElementById('year').textContent = new Date().getFullYear();
+
+		// Add lazy loading to all images
+		document.querySelectorAll('img').forEach(img => {
+			if (!img.hasAttribute('loading')) {
+				img.loading = 'lazy';
+			}
+		});
 	</script>
 </body>
 
