--- a/index.html
+++ b/index.html
@@ -193,6 +193,31 @@
 		<div class="categories">
 			<div class="items">
 				<div class="item">
+					<img alt="Movie Rating Prediction project" height="300"
+						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Movie%20Rating%20Prediction%20Using%20Transformer.png?raw=true"
+						width="300" />
+					<h3>
+						Movie Rating Prediction Using Transformer-Based Models
+					</h3>
+					<p class="project-date">Jan 2025 - Apr 2025</p>
+					<p>
+						<strong>University of Windsor</strong>
+						<br />
+						Developed a transformer-based approach utilizing the BART model to predict movie ratings from
+						plot summaries. Compared BART against traditional ML models (Naïve Bayes, SVM, Logistic
+						Regression, KNN, Random Forests, AdaBoost) and BERT. BART achieved an F1-score of 0.81,
+						significantly outperforming all baselines, demonstrating the superiority of contextualized
+						embeddings for text-based rating prediction.
+						<br />
+						<br />
+						<strong>Tech Stack:</strong> BART, Transformers, BERT, Naïve Bayes, SVM, Logistic Regression,
+						KNN, Random Forests, AdaBoost, Python, NLP
+					</p>
+					<a href="https://github.com/imran-ahmed377/movie_ratings_plot_summary" class="learn-more-button">
+						Learn More
+					</a>
+				</div>
+				<div class="item">
 					<img alt="Vehicle data analysis project" height="300"
 						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Data%20Analytics%20Project.png?raw=true"
 						width="300" />
