feat: Add Adaptive Query Optimization project details and implement animations for portfolio sections

--- a/index.html
+++ b/index.html
@@ -193,6 +193,33 @@
 		<div class="categories">
 			<div class="items">
 				<div class="item">
+					<img alt="Adaptive Query Optimization project" height="300"
+						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Adaptive%20Query%20Optimization.png?raw=true"
+						width="300" />
+					<h3>
+						Adaptive Query Optimization through Dynamic and Predictive Sharding in Large-Scale Databases
+					</h3>
+					<p class="project-date">Jan 2025 - Apr 2025</p>
+					<p>
+						<strong>University of Windsor</strong>
+						<br />
+						Dynamic Sharding adaptively redistributes data based on real-time workload patterns, while
+						Predictive Sharding employs machine learning models to anticipate future data growth and
+						optimize shard allocation proactively. The proposed methodology is evaluated using a synthetic
+						dataset, leveraging Linear Regression, Logistic Regression, Random Forest, and Artificial Neural
+						Networks to predict execution time and guide sharding decisions.
+						<br />
+						<br />
+						<strong>Tech Stack:</strong> Python, SQL, Machine Learning, Data Sharding, Linear Regression,
+						Logistic
+						Regression, Random Forest, Artificial Neural Networks
+					</p>
+					<a href="https://github.com/imran-ahmed377/dynamic-and-predictive-sharding"
+						class="learn-more-button">
+						Learn More
+					</a>
+				</div>
+				<div class="item">
 					<img alt="Movie Rating Prediction project" height="300"
 						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Movie%20Rating%20Prediction%20Using%20Transformer.png?raw=true"
 						width="300" />
