Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			<div class="items">
 				<div class="item">
 					<img alt="Adaptive Query Optimization project" height="300"
-						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Adaptive%20Query%20Optimization.png?raw=true"
+						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Adaptive%20Query%20Optimization2.png?raw=true"
 						width="300" />
 					<h3>
 						Adaptive Query Optimization through Dynamic and Predictive Sharding in Large-Scale Databases
