--- a/index.html
+++ b/index.html
@@ -193,6 +193,28 @@
 		<div class="categories">
 			<div class="items">
 				<div class="item">
+					<img alt="PointRide ride-sharing platform project" height="300"
+						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/PointRide2.png?raw=true"
+						width="300" />
+					<h3>
+						PointRide – A Secure Multi-Role Ride-Sharing Platform
+					</h3>
+					<p class="project-date">May 2025 - Aug 2025</p>
+					<p>
+						A full-stack Django and Bootstrap ride-sharing platform with multi-role authentication, dynamic
+						booking with seat management, and Google Maps integration. Features secure role-based dashboards
+						for Travelers, Drivers, and Admins, with comprehensive data validation and responsive design for
+						seamless cross-device experience.
+						<br />
+						<br />
+						<strong>Tech Stack:</strong> Django, Bootstrap, SQLite, Google Maps API, JavaScript, Git,
+						Python, HTML/CSS
+					</p>
+					<a href="https://github.com/imran-ahmed377/pointride" class="learn-more-button">
+						Learn More
+					</a>
+				</div>
+				<div class="item">
 					<img alt="Adaptive Query Optimization project" height="300"
 						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Adaptive%20Query%20Optimization2.png?raw=true"
 						width="300" />
