--- a/index.html
+++ b/index.html
@@ -215,6 +215,30 @@
 					</a>
 				</div>
 				<div class="item">
+					<img alt="Azure Data Factory ETL Pipeline project" height="300"
+						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Automated%20Sales%20Data%20ETL%20Pipeline%20using%20Azure%20Data%20Factory.png?raw=true"
+						width="300" />
+					<h3>
+						Automated Sales Data ETL Pipeline using Azure Data Factory
+					</h3>
+					<p class="project-date">Jan 2025 - Apr 2025</p>
+					<p>
+						<strong>University of Windsor</strong>
+						<br />
+						Developed a production-ready Azure Data Factory ETL pipeline integrating Blob Storage, Data
+						Flows, and SQL Database. Transforms raw sales data into analytics-ready datasets with data
+						filtering, derived columns, and schema mapping. Automated daily pipeline execution using ADF
+						triggers with parameterized inputs and source-controlled deployment via GitHub.
+						<br />
+						<br />
+						<strong>Tech Stack:</strong> Azure Data Factory, Azure Blob Storage, Azure SQL Database, Azure
+						Data Flows, SQL, Git, GitHub, Cloud Automation
+					</p>
+					<a href="https://github.com/imran-ahmed377/ADF-Learning-Project" class="learn-more-button">
+						Learn More
+					</a>
+				</div>
+				<div class="item">
 					<img alt="Adaptive Query Optimization project" height="300"
 						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Adaptive%20Query%20Optimization2.png?raw=true"
 						width="300" />
