--- a/index.html
+++ b/index.html
@@ -133,8 +133,6 @@
 			width: 100%;
 		}
 	</style>
-	</style>
-</head>
 </head>
 
 <body>
@@ -145,7 +143,7 @@
 			Imran Ahmed
 		</h1>
 		<p>
-			AI &amp; ML PRACTITIONER | DATA SCIENTIST | SOFTWARE DEVELOPER
+			APPLIED AI &amp; DATA SCIENCE | SOFTWARE DEVELOPER
 		</p>
 	</header>
 	<nav>
@@ -213,6 +211,26 @@
 						Data Flows, SQL, Git, GitHub, Cloud Automation
 					</p>
 					<a href="https://github.com/imran-ahmed377/ADF-Learning-Project" class="learn-more-button">
+						Learn More
+					</a>
+				</div>
+				<div class="item">
+					<img alt="Intelligent Document Q&A System with LLMs and RAG for Enterprise Knowledge Management"
+						height="300"
+						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Intelligent%20Document%20Q&A%20System.png?raw=true"
+						width="300" />
+					<h3>
+						Intelligent Document Q&A System with LLMs and RAG for Enterprise Knowledge Management
+					</h3>
+					<p class="project-subtitle"><strong>Data Platform & RAG Project</strong></p>
+					<p>
+						Built document ingestion and ETL pipelines feeding a data lake-backed AI application.
+						Implemented semantic search and monitoring for reliable, low-latency query responses.
+						<br />
+						<br />
+						<strong>Tech Stack:</strong> Python, Azure, LangChain, ChromaDB, Docker
+					</p>
+					<a href="https://github.com/imran-ahmed377/rag-assistant" class="learn-more-button">
 						Learn More
 					</a>
 				</div>
@@ -1587,7 +1605,7 @@
 				© <span id="year"></span>. All rights reserved.
 			</p>
 			<div class="social">
-				<a href="https://www.linkedin.com/in/imran-ahmed-mac-uwindsor/" title="LinkedIn">
+				<a href="https://www.linkedin.com/in/-imran-ahmed-/" title="LinkedIn">
 					<svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
 						<path
 							d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
