Update footer to include full name alongside copyright notice

--- a/index.html
+++ b/index.html
@@ -1602,7 +1602,7 @@
 		</section>
 		<footer>
 			<p>
-				© <span id="year"></span>. All rights reserved.
+				© <span id="year"></span> Imran Ahmed. All rights reserved.
 			</p>
 			<div class="social">
 				<a href="https://www.linkedin.com/in/-imran-ahmed-/" title="LinkedIn">
