--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 				</ul>
 			</div>
 			<div class="experience-card">
-				<h3 class="job-title">AI Research Intern (Collaborative Project)</h3>
+				<h3 class="job-title">AI Engineer</h3>
 				<p class="job-duration">Oct 2024 - Aug 2025</p>
 				<p class="job-company">MealLens AI, Windsor, Ontario, Canada</p>
 				<ul class="job-responsibilities">
