--- a/index.html
+++ b/index.html
@@ -191,6 +191,23 @@
 		<div class="categories">
 			<div class="items">
 				<div class="item">
+					<h3>
+						Semantic Layer & OLAP Cube Project
+					</h3>
+					<p>
+						Designed and implemented a semantic layer for e-commerce data with consistent business metrics
+						(Revenue, Order Count, AVG Order Value). Demonstrated OLAP operations and pre-aggregation
+						performance benefits, showcasing efficient data warehousing and analytics patterns.
+						<br />
+						<br />
+						<strong>Tech Stack:</strong> Metabase, Docker, Sample Database
+					</p>
+					<a href="https://github.com/imran-ahmed377/semantic-layer-olap-guide/tree/main"
+						class="learn-more-button">
+						Learn More
+					</a>
+				</div>
+				<div class="item">
 					<img alt="Azure Data Factory ETL Pipeline project" height="300"
 						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/Automated%20Sales%20Data%20ETL%20Pipeline%20using%20Azure%20Data%20Factory.png?raw=true"
 						width="300" />
