Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
 		<div class="categories">
 			<div class="items">
 				<div class="item">
+					<img alt="OLap project" height="300"
+						src="https://github.com/imran-ahmed377/imranahmed/blob/master/Projects%20Graphics/OLAP%20project%20image.png?raw=true"
+						width="300" />
 					<h3>
 						Semantic Layer & OLAP Cube Project
 					</h3>
